# Eagle-Eye

./: README.md  TESTING_GUIDE.md  ai_model.py  app.py  requirements.txt  security.db  test_startup.py
Farah_Project/eagle_eye/: .gitignore  README.md  main.py  pyproject.toml  setup_weights.py  test_gpu.py
Farah_Project/eagle_eye/eagle_eye/config/: folder_manager.py  settings.py
Farah_Project/eagle_eye/eagle_eye/core/: set_value.py  weight_utils.py
Farah_Project/eagle_eye/eagle_eye/core/alert/: event.py  manager.py  severity.py  snapshot.py
Farah_Project/eagle_eye/eagle_eye/core/alert/buffer/: registry.py  ring_buffer.py
Farah_Project/eagle_eye/eagle_eye/core/alert/notifier/: base.py  (+1 more)
Farah_Project/eagle_eye/eagle_eye/database/: __init__.py  engine.py  models.py
Farah_Project/eagle_eye/eagle_eye/database/sql/: __init__.py  media_store.py  metadata_store.py
Farah_Project/eagle_eye/eagle_eye/database/vector/: __init__.py  vector_db.py
Farah_Project/eagle_eye/eagle_eye/interfaces/api/: app.py
Farah_Project/eagle_eye/eagle_eye/usecases/: __init__.py  base.py  pipe.py
Farah_Project/eagle_eye/eagle_eye/usecases/face_recognition/: __init__.py  training.md  usecase.py
Farah_Project/eagle_eye/eagle_eye/usecases/fight_detection/: __init__.py  training.md  usecase.py
Farah_Project/eagle_eye/eagle_eye/usecases/object_detection/: __init__.py  training.md  usecase.py
Farah_Project/eagle_eye/eagle_eye/utils/: logger.py
Farah_Project/eagle_eye/tests/: repro_debug.py  test_alert.py  test_api.py  test_core.py  test_database.py  test_uresult.py  test_usecases.py
(+38 files in other folders)
